@@ -169,6 +169,7 @@ class action_plugin_ckgdoku_save extends DokuWiki_Action_Plugin {
        } 
        
         $this->replace_entities();
+ /*Remove urls from linkonly images inserted after second and additional saves, resulting in multiple urls  corrupting  HTML output */
         $TEXT = preg_replace("/\{\{http:\/\/.*?fetch.php\?media=(.*?linkonly.*?)\}\}/",'{{' . "$1" .'}}',$TEXT);
         $TEXT = str_replace('< nowiki >', '%%<nowiki>%%',$TEXT);
 
@@ -179,6 +180,17 @@ class action_plugin_ckgdoku_save extends DokuWiki_Action_Plugin {
                     global $ID, $conf;      
                 
                     if(preg_match("/\[\[http/",$matches[0])) return $matches[0];  //not an internal link
+                   
+                    if (preg_match("/\[\[.*?|\{\{\]\]/", $matches[0])) {   //internal link with image link
+                        if(!$this->getConf('rel_links')) { 
+                            return $matches[0];
+                        }
+                      $link = explode('?',$matches[1]); 
+                      list($link_id,$linktext) = explode('|', $link[0]); 
+                      $current_id = $this->abs2rel($link_id,$ID); 
+                      return preg_replace("#$link_id#",$current_id, $matches[0]);                      
+                   }                                   
+                   
                    $link = explode('?',$matches[1]);
                    list($link_id,$linktext) = explode('|', $link[0]);          
                    if($this->getConf('rel_links')) 
